# nosce

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  INSTALL.md  README.md  install.sh  nosce.config.yml  nosce.yml  release-please-config.json
.claude/skills/docs/: SKILL.md
.claude/skills/sync/: SKILL.md
.github/workflows/: release-please.yml  release.yml
cli/: Cargo.toml
cli/src/: commands.rs  config.rs  fs_ops.rs  main.rs  server.rs  update.rs  web.rs
cli/src/prompts/: docs.md  sync.md
frontend/: .prettierrc.json  eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: app.tsx  index.css  types.ts
frontend/src/components/: CommandPalette.tsx  MarkdownContent.tsx  MediaGallery.tsx  ProfileSelector.tsx  Sidebar.tsx  TableOfContents.tsx
frontend/src/context/: ProfileContext.tsx
frontend/src/pages/: Home.tsx  PackageView.tsx  ReportView.tsx  ReportsList.tsx
mcp-server/: Cargo.toml  build.rs
mcp-server/src/: config.rs  fs_ops.rs  main.rs  server.rs  update.rs  web.rs
mcp-server/src/prompts/: docs.md  mod.rs  sync.md
webui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webui/src/: api.ts  app.tsx  constants.ts  index.css  main.tsx
webui/src/components/: CommandPalette.tsx  MarkdownContent.tsx  MediaGallery.tsx  Sidebar.tsx  TableOfContents.tsx
webui/src/context/: ProfileContext.tsx
webui/src/pages/: DocView.tsx  Home.tsx  ReportView.tsx  ReportsList.tsx  Search.tsx  SubmoduleView.tsx
