[workspace]
members = ["cli"]
resolver = "2"

[workspace.package]
version = "1.1.1"
edition = "2021"
license = "MIT"
authors = ["Julien Andreu"]
homepage = "https://github.com/julienandreu/nosce"
repository = "https://github.com/julienandreu/nosce"
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
