[package]
name = "nosce"
version.workspace = true
edition.workspace = true
description = "MCP server and web frontend for nosce - serves generated docs and reports"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["mcp", "documentation", "changelog", "git", "submodules"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "nosce"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.17", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "1.0"
walkdir = "2"
anyhow = "1"
chrono = "0.4"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shellexpand = "3"

# Web frontend
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
daemonize = "0.5"
libc = "0.2"
pulldown-cmark = "0.12"
rust-embed = { version = "8", features = ["compression"] }
nanospinner = "0.3"

# Auto-update
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
const_format = "0.2"
self-replace = "1"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
tempfile = "3"

[build-dependencies]
chrono = "0.4"

[package.metadata.deb]
maintainer = "Julien Andreu"
section = "utility"
assets = [["target/release/nosce", "usr/bin/", "755"]]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/nosce", dest = "/usr/bin/nosce", mode = "0755" },
]
